homepage category images

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -49,6 +49,12 @@
         }
       }
 
+      &--merch {
+        .k-cornerimg {
+          bottom: -5em !important;
+        }
+      }
+
       .k-preheading {
         span {
           color: $highlight;
