--- a/src/scss/components/_process-preview.scss
+++ b/src/scss/components/_process-preview.scss
@@ -170,6 +170,23 @@
     &__iconrow {
       &__item {
         flex-basis: 16%;
+
+        svg {
+          width: 300%;
+          height: 300%;
+          transform: translate(-25%, -25%);
+        }
+
+        .k-videogallery--actions {
+          &__title {
+            margin-top: 3em;
+          }
+
+          &__icon:before {
+            width: 1.5em;
+            height: 1.5em;
+          }
+        }
       }
     }
   }
