remove placeholders from PDP lab results/IE compatibility

--- a/src/scss/global/_IE.scss
+++ b/src/scss/global/_IE.scss
@@ -23,4 +23,12 @@
   .k-latestbatch--tabs {
     flex-flow: row nowrap;
   }
+
+  .k-latestbatch__icon-description {
+    max-width: 100%;
+  }
+
+  .k-recentresults__category-button {
+    flex-basis: 18.5%;
+  }
 }
