--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -42,11 +42,17 @@
 
     .k-figure--liner {
       padding-bottom: 100%;
+      svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
-  &__icon-title,
-  &__icon-text {
+  &__icon-description {
     p {
       margin: 0;
     }
