lab results revisions

--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -259,8 +259,8 @@
       }
 
       &:nth-child(2) {
-        flex-basis: 16.5%;
-        margin: 0 auto;
+        flex-basis: 26.5%;
+        margin-left: auto;
         padding-left: 2em;
       }
 
