--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -11,6 +11,11 @@
     border-top: 0.25em solid $primary;
     box-shadow: 0 0 5px #dedede;
 
+    .form-row {
+      display: block;
+      width: 100%;
+    }
+
     & > .k-liner {
       padding: 1em 2em;
       background: $true-white;
