comment typo + blog-listing cta banner bg img fix

--- a/src/scss/components/_cta-banner.scss
+++ b/src/scss/components/_cta-banner.scss
@@ -72,6 +72,7 @@
   .cta-subscribe-bg {
     background-image: url('../img/email-signup-cta.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
   }
   .k-cta--preheading {
     color: $highlight;
