--- a/src/scss/components/_testimonial-slider.scss
+++ b/src/scss/components/_testimonial-slider.scss
@@ -22,3 +22,19 @@
     bottom: -4em;
   }
 }
+
+@media (min-width: $bp-xl) {
+  .k-testimonialslider {
+    &--slide .k-headline--sm {
+      font-size: 2.25em;
+    }
+  }
+}
+
+@media (min-width: $bp-xxl) {
+  .k-testimonialslider {
+    &--slide .k-headline--sm {
+      font-size: 2.6em;
+    }
+  }
+}
