--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -41,9 +41,6 @@
     h3 {
       margin: 0;
       font-size: 120%;
-      // white-space: nowrap;
-      // overflow: hidden;
-      // text-overflow: ellipsis;
 
       a {
         color: $black;
@@ -59,8 +56,22 @@
     }
   }
 
+  &--price {
+    text-align: center;
+
+    p {
+      margin: 0;
+      font-weight: bold;
+    }
+
+    span {
+      color: $primary;
+      font-weight: normal;
+    }
+  }
+
   &--action {
-    margin-top: 2em;
+    margin-top: 1em;
 
     .k-button {
       display: block;
