--- a/src/scss/components/_process-preview.scss
+++ b/src/scss/components/_process-preview.scss
@@ -88,6 +88,12 @@
         color: $black;
       }
     }
+
+    .koi-plant {
+      path:first-child {
+        fill: none;
+      }
+    }
   }
 
   &__icon {
