--- a/src/scss/global/_utils.scss
+++ b/src/scss/global/_utils.scss
@@ -7,6 +7,12 @@
   transition: opacity 0.35s $ease-out-circ;
 }
 
+.backdrop-active {
+  z-index: 100;
+  opacity: 0.9;
+  pointer-events: all;
+}
+
 .k-result-error {
   position: relative;
 
