lab results updates

--- a/src/scss/global/_utils.scss
+++ b/src/scss/global/_utils.scss
@@ -1,6 +1,6 @@
-.k-headerpadding {
-  // transition: padding .4s $ease-out-circ;
-}
+// .k-headerpadding {
+// transition: padding .4s $ease-out-circ;
+// }
 
 .fade {
   opacity: 0;
@@ -58,9 +58,9 @@
   display: inline-block !important;
 }
 
-.k-goldstar--0 {
-  // margin-left: 0.5em !important;
-}
+// .k-goldstar--0 {
+// margin-left: 0.5em !important;
+// }
 
 .k-wraparound-link {
   position: absolute;
