--- a/src/scss/global/_utils.scss
+++ b/src/scss/global/_utils.scss
@@ -2,6 +2,10 @@
 // transition: padding .4s $ease-out-circ;
 // }
 
+.k-limit-reached {
+  color: green;
+}
+
 .fade {
   opacity: 0;
   transition: opacity 0.35s $ease-out-circ;
