--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/cta-banner';
 @import 'components/process-preview';
 @import 'components/product-hero';
+@import 'components/product-hero--new';
 @import 'components/product-details';
 @import 'components/product-latest-batch';
 @import 'components/product-faq-accordion';
