initial product bundle hero

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,8 @@
 @import 'components/breadcrumbs';
 @import 'components/social-icons';
 
+@import 'components/bundled-products';
+
 @import 'pages/home';
 @import 'pages/blog-listing';
 @import 'pages/blog-single';
