--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -3,6 +3,15 @@
   display: none !important;
 }
 
+main {
+  /**
+  For some reason, labels inside of forms are given min/max-widths of 100%
+  and when there's no relative parent, they overflow the document and create
+  X-scroll.
+  */
+  overflow: hidden;
+}
+
 main:focus {
   outline: none;
   box-shadow: none;
